--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Katrina Hussain
+title: Katrina H
 email: me@katrinah.io
 description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog/
@@ -7,7 +7,7 @@ url: "http://katrinah.io" # the base hostname & protocol for your site
 twitter_username: trinabhu
 github_username:  KatrinaH
 linkedin_username: 
-googlePlus_username: KatrinaHussain
+googlePlus_username: 
 
 # Build settings
 markdown: kramdown
