--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Katrina H
 email: me@katrinah.io
 description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://katrinah.io" # the base hostname & protocol for your site
+url: # the base hostname & protocol for your site
 twitter_username: trinabhu
 github_username:  KatrinaH
 linkedin_username: 
